@@ -1,27 +1,18 @@
 package com.example.planslot.global.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
-
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Configuration
 public class WebConfig implements WebMvcConfigurer {
 
-    @Value("${file.upload.board-path:./uploads/board}")
-    private String boardUploadPath;
-
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        String resourceLocation = Path.of(boardUploadPath)
-                .toAbsolutePath()
-                .normalize()
-                .toUri()
-                .toString();
+        String uploadUri = Paths.get(System.getProperty("user.dir"), "uploads").toUri().toString();
 
-        registry.addResourceHandler("/uploads/board/**")
-                .addResourceLocations(resourceLocation);
+        registry.addResourceHandler("/uploads/**")
+                .addResourceLocations(uploadUri);
     }
 }
